--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
   bulid:
     strategy:
         matrix:
-            os: [linux-x64, osx-arm64, win-x64]
+            os: [linux-x64, win-x64]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,7 +18,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Build
-        run: "dotnet publish -c Release -o ./publish -r: ${{ matrix.os }}"
+        run: "dotnet publish ./SshGateway/SshGateway.csproj -c Release -o ./publish -r: ${{ matrix.os }}"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
