--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
   bulid:
     strategy:
         matrix:
-            os: [linux-x64, win-x64]
+            os: [linux-x64, win-x64, linux-musl-x64]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
